# Hogwild

./: CMakeLists.txt  README.md  makefile
src/: dataset.cpp  estimator.cpp  estimator.hpp  glm.cpp  glm.hpp  main.cpp  queue.cpp  queue.hpp  reader.cpp  reader.hpp  regression.cpp  score.cpp  score.hpp  solver.cpp  solver.hpp  utils.cpp  utils.hpp
